# stalin

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TODO.md  docker-compose.yml  prek.toml
docker/: monitored-entrypoint.sh  monitored.Dockerfile
docs/decisions/: 0001-pingora-before-mitm.md
examples/: google-workspace-auth.plugin.ts  google-workspace-oauth-refresh.toml  google-workspace-v8.toml  openai-auth.plugin.ts  stalin-mitm.toml  stalin.toml  stalin.yml
plugins/: proxy.d.ts
src/: audit.rs  config.rs  lib.rs  main.rs  mitm.rs  oauth.rs  plugin.rs  policy.rs  proxy.rs  secrets.rs
