[package]
name = "stalin"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Policy-controlled egress proxy for agent containers"

[dependencies]
anyhow = "1.0"
axum = "0.8"
bytes = "1.7"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
http = "1.1"
hyper = "1.5"
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.13"
